# autour_core

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
README_images/access/: access.dot
README_images/access_and_mini/: minimize.dot
README_images/hide_and_sub/: hide.dot
README_images/minimize/: dfa.dot
README_images/translation/: gnfa1_bridge.dot
src/: lib.rs  utils.rs
src/bre/: bre.rs  mod.rs  term.rs
src/bre/implem/: build.rs  letter.rs  mod.rs  tostring.rs  translate.rs
src/dfa/: dfa.rs  mod.rs
src/dfa/implem/: access.rs  build.rs  characterize.rs  letter.rs  mod.rs  run.rs  to_dot.rs  transform.rs  translate.rs
src/ere/: mod.rs  term.rs
src/ere/implem/: letter.rs  mod.rs  tostring.rs
src/gnfa/: gnfa.rs  mod.rs
src/gnfa/implem/: access.rs  build.rs  characterize.rs  letter.rs  mod.rs  run.rs  to_dot.rs  transform.rs  translate.rs
src/nfa/: mod.rs  nfa.rs
src/nfa/algos/: mod.rs
src/nfa/implem/: access.rs  build.rs  characterize.rs  letter.rs  run.rs  to_dot.rs  transform.rs  translate.rs
src/nfait/: mod.rs  nfait.rs
src/nfait/implem/: access.rs  build.rs  characterize.rs  letter.rs  mod.rs  run.rs  to_dot.rs  transform.rs  translate.rs
src/printers/: commons.rs  mod.rs  p_chars.rs
src/tests/: abstract_automaton_test.rs  mod.rs
src/tests/bre/: bretest.rs  mod.rs
src/tests/dfa/: dfatest.rs  ex1_abc.rs  minimize.rs  mod.rs
src/tests/gnfa/: ex1.rs  gnfatest.rs  hide.rs  mod.rs
src/traits/: access.rs  build.rs  characterize.rs  error.rs  letter.rs  mod.rs  repr.rs  run.rs  transform.rs  translate.rs
(+7 files in other folders)
